--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:theme="@style/Theme.RecyclerViewLearn">
         <activity
             android:name=".activity.RecyclerActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".activity.MainActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
