--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light.NoActionBar">
+        android:theme="@style/Theme.RecyclerViewLearn">
+        <activity
+            android:name=".activity.InsideRecyclerViewActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.LoadingMoreActivity"
             android:exported="false" />
