--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RecyclerViewLearn">
         <activity
+            android:name=".activity.GridViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.NestedScrollViewActivity"
             android:exported="false" />
         <activity
